oauth로그인완료

--- a/SpringBootSecurity/src/main/resources/application.properties
+++ b/SpringBootSecurity/src/main/resources/application.properties
@@ -19,3 +19,5 @@ logging.level.com.example.springbootsecurity=debug
 logging.level.org.hibernate.type=trace
 #logging.level.web=debug
 #logging.level.sql=debug
+
+spring.profiles.include=oauth
